fix: serialize restore inventories correctly